--- a/index.html
+++ b/index.html
@@ -37,12 +37,7 @@
                 <h1>Our Games:</h1>
                 <div id="games" class="center">
                     <div class="game">
-                        <a href="https://gamejolt.com/games/projectevie/699766">
-                            <img class="game" src="imgs/Evie.png" alt="Project Evie">
-                            <h4>Project Evie</h4>
-                            <p style="text-decoration: underline">(old logo)</p>
-                        </a>
-                        <p>A top-down</br>adventure game</p>
+                        <iframe src="https://widgets.gamejolt.com/package/v1?key=cNDw4ptA" frameborder="0" width="500" height="245"></iframe>
                     </div>
                 </div>
             </div>
