Fixed Menu a bit

--- a/team/index.html
+++ b/team/index.html
@@ -23,17 +23,13 @@
 
     <body>
         <div class="nav">
-            <a href="/#main">Home</a>
-            <a class="active" href="/team">Team</a>
+            <a href="/"><img class="logo" src="imgs/logo.png"></a>
+            <a class="active">Team</a>
         </div>
         <div class="main" id="main">
-            <br><br>
-            <div style="text-align: center;">
-                <a href="/"><img class="logo" src="/imgs/logo.png"></a>
-            </div>
-
             <div id="hello">
-                <h1>Indie Game Studio</h1>
+                <h1 class="bigtext">LonelyPie</h1>
+                <h2>Average Indie Game Studio (just better)</h2>
             </div>
 
             <div id="team">
@@ -42,7 +38,7 @@
                     <div class="column3">
                         <div id="andus" class="teammember">
                             <div style="text-align: center;">
-                                <img src="/imgs/team/AndusLogo.png"/>
+                                <img src="/imgs/team/AndusLogo.png" width=50px height=50px/>
                                 <h2 class="teammember">Andus</h2>
                                 <h2 class="teamwork">Developer, Artist</h2>
                             </div>
