--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <body>
         <div class="nav">
             <a href="/"><img class="logo" src="imgs/logo.png"></a>
-            <a class="active" href="/#main">Home</a>
             <a href="/team">Team</a>
         </div>
         <div class="main" id="main">
@@ -37,7 +36,7 @@
                 <h1>Our Games:</h1>
                 <div id="games" class="center">
                     <div class="game">
-                        <iframe src="https://widgets.gamejolt.com/package/v1?key=cNDw4ptA" frameborder="0" width="500" height="245"></iframe>
+                        <iframe src="https://widgets.gamejolt.com/package/v1?key=cNDw4ptA&theme=light" frameborder="0" width="500" height="245"></iframe>
                     </div>
                 </div>
             </div>
