--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <body>
         <div class="nav">
-            <a href="/"><img class="logo" src="imgs/logo.png"></a>
+            <a href="/"><img class="logo" src="/imgs/logo.png"></a>
             <a href="/team">Team</a>
         </div>
         <div class="main" id="main">
