--- a/team/index.html
+++ b/team/index.html
@@ -23,7 +23,7 @@
 
     <body>
         <div class="nav">
-            <a href="/"><img class="logo" src="imgs/logo.png"></a>
+            <a href="/"><img class="logo" src="/imgs/logo.png"></a>
             <a class="active">Team</a>
         </div>
         <div class="main" id="main">
@@ -38,7 +38,7 @@
                     <div class="column3">
                         <div id="andus" class="teammember">
                             <div style="text-align: center;">
-                                <img src="/imgs/team/AndusLogo.png" width=50px height=50px/>
+                                <img src="/imgs/team/AndusLogo.png" width=75px height=75px/>
                                 <h2 class="teammember">Andus</h2>
                                 <h2 class="teamwork">Developer, Artist</h2>
                             </div>
@@ -54,30 +54,6 @@
                         </div>
                     </div>
                     <div class="column3">
-                        <div id="creta" class="teammember">
-                            <div style="text-align: center;">
-                                <img src="/imgs/placeHolder.png"/>
-                                <h2 class="teammember">Creta</h2>
-                                <h2 class="teamwork">Translator</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div id="special">
-                <h1 class="bigtext">Special Thanks:</h1>
-                <div class="row">
-                    <div class="column">
-                        <div id="lucepric" class="teammember">
-                            <div style="text-align: center;">
-                                <img src="/imgs/placeHolder.png"/>
-                                <h2 class="teammember">LucePric</h2>
-                                <h2 class="teamwork">Story Writer</h2>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="column">
                         <div id="creta" class="teammember">
                             <div style="text-align: center;">
                                 <img src="/imgs/placeHolder.png"/>
