Change Discord Link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
             <ul class="right-menu">
                 <li class="social"><a title="Documentation" href="https://docs.lonelypie.net"><i class="bi bi-file-text-fill"></i></a></li>
-                <li class="social"><a title="Discord Server" href="https://discord.lonelypie.net"><i class="bi bi-discord"></i></a></li>
+                <li class="social"><a title="Discord Server" href="https://discord.gg/Jc22Ty7trq"><i class="bi bi-discord"></i></a></li>
                 <li class="social"><a title="Youtube Channel" href="https://yt.lonelypie.net"><i class="bi bi-youtube"></i></a></li>
                 <li class="social"><a title="Instagram" href="https://ig.lonelypie.net"><i class="bi bi-instagram"></i></a></li>
                 <li class="social"><a title="Subreddit" href="https://reddit.lonelypie.net"><i class="bi bi-reddit"></i></a></li>
