Added more keywords to be reconizable

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>LonelyPie Studio - Home</title>
         <meta charset="UTF-8">
-        <meta name="keywords" content="LonelyPie, Studio, Indie, Games, Evie">
+        <meta name="keywords" content="LonelyPie, Indie, Studio, Games, Game, Indie Game, Indie Studio, Game Studio, Indie Game Studio, Game Development, Godot Engine, Open Source, Game Art, Video Games, Evie, Vita, Switch, Vita Homebrew, Switch Homebrew, Homebrew, Game Ports, Adventure Game, Adventure Games, Free, Free Ganes, Adventure">
         <meta name="description" content="A Small Indie Game Studio">
         <meta name="author" content="LonelyPie">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
