--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="social"><a title="Youtube Channel" href="https://yt.lonelypie.net"><i class="bi bi-youtube"></i></a></li>
                 <li class="social"><a title="Instagram" href="https://ig.lonelypie.net"><i class="bi bi-instagram"></i></a></li>
                 <li class="social"><a title="Subreddit" href="https://reddit.lonelypie.net"><i class="bi bi-reddit"></i></a></li>
-                <li class="social"><a rel="me" href="https://mastodon.social/@lonelypie"><i class="bi bi-mastodon"></i></a></li>
+                <li class="social"><a rel="me" title="Mastodon" href="https://mastodon.social/@lonelypie"><i class="bi bi-mastodon"></i></a></li>
             </ul>
         </nav>
 
