Updated Game Links

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <h3>Evie</h3>
                     <h4>An upcoming top-down adventure game</h4>
                     <h4>Download Links:</h4>
+                    <a title="itch.io" class="os center" href="https://lonelypie.itch.io/evie"><i class="bi bi-pc-display"></i> <i class="bi bi-playstation"></i> Itch.io - All platforms</a>
                     <a title="PC" class="os center" href="https://github.com/LnlyPie/Evie/releases/latest"><i class="bi bi-pc-display"></i> Windows, Linux, MacOS</a>
-                    <a title="Switch" class="os center" href="https://github.com/LnlyPie/Evie-Homebrew-Ports/releases/latest"><i class="bi bi-nintendo-switch"></i> Nintendo Switch (Modded)</a>
                     <a title="Vita" class="os center" href="https://vitadb.rinnegatamante.it/#/info/1053"><i class="bi bi-playstation"></i> Playstation Vita (Modded)</a>
                 </div>
             </div>
@@ -80,6 +80,7 @@
 
         <footer>
             <p class="center">&copy; 2023 LonelyPie Studio. All pies reserved.</p>
+            <p class="center">(CC BY-SA 4.0)</p>
         </footer>
     </body>
 </html>
