--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <body>
         <nav>
             <ul class="left-menu">
-                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
                 <li><a href="#games">Games</a></li>
                 <li><a href="#team">Team</a></li>
             </ul>
             <ul class="right-menu">
                 <li class="social"><a title="Documentation" href="https://docs.lonelypie.net"><i class="bi bi-file-text-fill"></i></a></li>
-                <li class="social"><a title="Discord Server" href="https://discord.gg/Jc22Ty7trq"><i class="bi bi-discord"></i></a></li>
+                <li class="social"><a title="Discord Server" href="https://discord.lonelypie.net"><i class="bi bi-discord"></i></a></li>
                 <li class="social"><a title="Youtube Channel" href="https://yt.lonelypie.net"><i class="bi bi-youtube"></i></a></li>
                 <li class="social"><a title="Instagram" href="https://ig.lonelypie.net"><i class="bi bi-instagram"></i></a></li>
                 <li class="social"><a title="Subreddit" href="https://reddit.lonelypie.net"><i class="bi bi-reddit"></i></a></li>
@@ -36,6 +36,13 @@
             <a class="center" href="/"><img alt="LonelyPie Logo" class="logo" src="imgs/logo.png"></a>
             <h1>LonelyPie Studio</h1>
             <h2>A Small Indie Game Studio</h2>
+        </section>
+
+        <section id="about">
+            <h2>About Us:</h2>
+            <h4>We are LonelyPie, an independent game studio dedicated to creating most unique gaming experiences.<br>
+                We believe in the power of storytelling and trying to deliver the most memorable adventures you can think of.<br>
+                Join us on our journey as we bring your imagination to life, one game at a time.</h4>
         </section>
     
         <section id="games">
@@ -74,6 +81,29 @@
                 <div class="column">
                     <h3>Story Writers:</h3>
                     <h4>LucePric</h4>
+                </div>
+            </div>
+        </section>
+
+        <section id="helpusout">
+            <h2>Help Us Out!</h2>
+            <div class="row">
+                <div class="column2">
+                    <i style="color: #c4c4c4; font-size: 45px;" class="bi bi-code center"></i>
+                    <h2>Open for all</h2>
+                    <h4>You're good at coding? The code of our games is avaliable <a title="Github" href="https://github.com/LnlyPie">over here</a>. If you want to help, nobody's stopping you!</h4>
+                </div>
+                <div class="column2">
+                    <i style="color: #c4c4c4; font-size: 45px;" class="bi bi-people-fill center"></i>
+                    <h2>Community</h2>
+                    <div class="column2">
+                        <i style="color: #5865F2; font-size: 20px;" class="bi bi-discord center"></i>
+                        <h4>You can <a title="LonelyPie's Discord Server" href="https://discord.lonelypie.net">join us on Discord</a> to get the latest development updates<br>and integrate with the community!</h4>
+                    </div>
+                    <div class="column2">
+                        <i style="color: #FF4500; font-size: 20px;" class="bi bi-reddit center"></i>
+                        <h4>We have a <a title="LonelyPie's Subreddit" href="https://reddit.lonelypie.net">Subreddit</a> you can join! Engage with the community,<br>ask questions, share screenshots! Whatever comes to your mind.</h4>
+                    </div>
                 </div>
             </div>
         </section>
