--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <nav>
             <ul class="left-menu">
-                <li><a href="#about">About Us</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#games">Games</a></li>
                 <li><a href="#team">Team</a></li>
             </ul>
