--- a/index.html
+++ b/index.html
@@ -89,20 +89,20 @@
             <h2>Help Us Out!</h2>
             <div class="row">
                 <div class="column2">
-                    <i style="color: #c4c4c4; font-size: 45px;" class="bi bi-code center"></i>
-                    <h2>Open for all</h2>
-                    <h4>You're good at coding? The code of our games is avaliable <a title="Github" href="https://github.com/LnlyPie">over here</a>. If you want to help, nobody's stopping you!</h4>
+                    <i class="bi bi-code center" style="color: #c4c4c4; font-size: 45px;"></i>
+                    <h2>Open for All</h2>
+                    <h4>If you're good at coding, you can contribute to our games by visiting our <a title="Github" href="https://github.com/LnlyPie">GitHub repository</a>. Your help is greatly appreciated!</h4>
                 </div>
                 <div class="column2">
-                    <i style="color: #c4c4c4; font-size: 45px;" class="bi bi-people-fill center"></i>
+                    <i class="bi bi-discord center" style="color: #5865F2; font-size: 45px;"></i>
                     <h2>Community</h2>
                     <div class="column2">
-                        <i style="color: #5865F2; font-size: 20px;" class="bi bi-discord center"></i>
-                        <h4>You can <a title="LonelyPie's Discord Server" href="https://discord.lonelypie.net">join us on Discord</a> to get the latest development updates<br>and integrate with the community!</h4>
+                        <i class="bi bi-discord center" style="color: #5865F2; font-size: 20px;"></i>
+                        <h4>Join our <a title="LonelyPie's Discord Server" href="https://discord.lonelypie.net">Discord server</a> to get the latest development updates and interact with our community!</h4>
                     </div>
                     <div class="column2">
-                        <i style="color: #FF4500; font-size: 20px;" class="bi bi-reddit center"></i>
-                        <h4>We have a <a title="LonelyPie's Subreddit" href="https://reddit.lonelypie.net">Subreddit</a> you can join! Engage with the community,<br>ask questions, share screenshots! Whatever comes to your mind.</h4>
+                        <i class="bi bi-reddit center" style="color: #FF4500; font-size: 20px;"></i>
+                        <h4>Engage with our community, ask questions, and share screenshots on our <a title="LonelyPie's Subreddit" href="https://reddit.lonelypie.net">Subreddit</a>. We'd love to hear from you!</h4>
                     </div>
                 </div>
             </div>
